changed title tag in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Assignments | Mike Garcia's CS313 Class Page</title>
+	<title>Home | Mike Garcia's CS313 Class Page</title>
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
