updated assignments.html to point to the correct folder

--- a/assignments.html
+++ b/assignments.html
@@ -18,7 +18,7 @@
 		<div class="clear"></div>
 		<div id="content">
 			<h2>Assignments</h2>
-			<p><li><a href="/assignments/survey.php">Survey</a></li></p>
+			<p><li><a href="/assignments/survey/survey.php">Survey</a></li></p>
 		</div>
 	</div>
 </body>
